<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greencolorPrimaryDark"
    tools:context=".MainActivity">

    <!-- Casos confirmados: -->

    <TextView
        android:id="@+id/tv_city1"
        android:layout_width="308dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="1"
        android:contentDescription="@string/city"
        android:gravity="center_horizontal|top"
        android:text="Tocantins"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="312dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:contentDescription="@string/state"
        android:gravity="center_horizontal|top"
        android:text="PI"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="312dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:contentDescription="@string/country"
        android:gravity="center_horizontal|top"
        android:text="@string/country"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/tv_confirmed"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="1"
        android:contentDescription="tv_confirmed"
        android:gravity="center_vertical|right"
        android:text="37"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        tools:text="37" />

    <TextView
        android:id="@+id/tv_healed"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="1"
        android:contentDescription="tv_healed"
        android:gravity="center_vertical|right"
        android:text="28"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        tools:text="28" />

    <TextView
        android:id="@+id/tv_death"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="1"
        android:contentDescription="tv_confirmed"
        android:gravity="center_vertical|right"
        android:text="2"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749"
        tools:text="2" />

    <TextView
        android:id="@+id/deathtoll"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:gravity="center_vertical|right"
        android:text="@string/deathtoll"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <TextView
        android:id="@+id/tv_suspected"
        android:layout_width="312dp"
        android:layout_height="61dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="1"
        android:contentDescription="tv_confirmed"
        android:gravity="center_vertical|right"
        android:text="52"
        android:textColor="@color/colorText"
        android:textSize="48sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        tools:text="52" />

    <TextView
        android:id="@+id/confirmed_cases"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:gravity="center_vertical|right"
        android:text="@string/confirmedcases"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/healed"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:gravity="center_vertical|right"
        android:text="@string/healed"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <TextView
        android:id="@+id/suspected_cases"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:gravity="center_vertical|right"
        android:text="@string/suspectcases"
        android:textColor="@color/colorText"
        android:textSize="21sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <View
        android:id="@+id/bluebig"
        android:layout_width="229dp"
        android:layout_height="405dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/greenbig"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/blueup"
        android:layout_width="92dp"
        android:layout_height="105dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/greenup"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/blumiddlep"
        android:layout_width="70dp"
        android:layout_height="66dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@drawable/greenmiddle"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

</androidx.constraintlayout.widget.ConstraintLayout>